fixed an issue where the header was scrolling horizontally on mobile

--- a/less/uiv2.less
+++ b/less/uiv2.less
@@ -1304,6 +1304,13 @@ a:hover .arrowAddEvidenceButton {
 	}
 }
 
+@media (max-device-width: 767px) {
+	#mainContainer {
+		zoom: .8;
+    overflow: scroll; // fixes an issue where the header scrolls horizontally on mobile
+	}
+}
+
 @media (max-width: 767px) {
 
  @cardWidthSmallScreens: 80vw;
